[package]
name = "new_ebc_battery_tester"
version = "0.1.0"
edition = "2024"

[dependencies]
serialport = "4"

tracing = "0.1"
tracing-subscriber = "0.3"

color-eyre = "0.6.5"
tokio = {version = "1.52.3", features = ["full"]}
axum = {version = "0.8.9", features = ["ws"]}
tower-http = "0.7.0"

serde_json = "1.0.150"
serde = {version = "1.0.228", features = ["serde_derive"]}
csv = "1"
futures-util = "0.3.32"
toml = "1.1.2"
